# LangGraph_OpenAI-Agentic_AI_locally

./: README.md
langgraph-ollama-agent/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
langgraph-ollama-agent/data/: knowledge.json
langgraph-ollama-agent/notebooks/: experiments.ipynb
langgraph-ollama-agent/scripts/: setup.ps1  setup.sh  test_ollama.py
langgraph-ollama-agent/src/: __init__.py  main.py
langgraph-ollama-agent/src/agent_logic/: __init__.py  definitions.py
langgraph-ollama-agent/src/core/: config.py  state.py
langgraph-ollama-agent/src/expert_agents/: __init__.py  classifier.py  code_expert.py  history_expert.py  science_expert.py
langgraph-ollama-agent/src/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
langgraph-ollama-agent/src/models/: __init__.py  ollama_config.py
langgraph-ollama-agent/src/repository/: __init__.py  internal_db.py
langgraph-ollama-agent/src/tools/: __init__.py  calculator.py  web_search.py  web_tools.py
langgraph-ollama-agent/src/utils/: __init__.py  logger.py  validators.py
langgraph-ollama-agent/src/workflow/: graph.py
langgraph-ollama-agent/tests/: __init__.py  test_agents.py  test_graph.py  test_tools.py
