[project]
name = "langgraph-ollama-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.6",
    "openai-agents>=0.13.6",
    "python-dotenv>=1.2.2",
]
